projects/gateway2/examples/example-https-gw-and-route-with-attached-options.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: https-gw
spec:
  gatewayClassName: gloo-gateway
  listeners:
  - protocol: HTTPS
    port: 8443
    name: https
    tls:
      mode: Terminate
      certificateRefs:
        - name: https
          kind: Secret
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
spec:
  parentRefs:
  - name: https-gw
  hostnames:
  - "example.com"
  rules:
  - backendRefs:
    - name: example-svc
      port: 8080
  - matches:
    - path:
        type: PathPrefix
        value: /timeout
    backendRefs:
    - name: example-svc
      port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: example-svc
spec:
  selector:
    app.kubernetes.io/name: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http-web-svc
# ---
# apiVersion: v1
# kind: Pod
# metadata:
#   name: nginx
#   labels:
#     app.kubernetes.io/name: nginx
# spec:
#   containers:
#   - name: nginx
#     image: nginx:stable
#     ports:
#     - containerPort: 80
#       name: http-web-svc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:stable
        ports:
        - containerPort: 80
          name: http-web-svc
